Scripted auto-commit on change (2021-11-03 13:23:44) by gitwatch.sh